# soft-delete

./: README.md  docker-compose.yml  pyproject.toml
src/: es_worker.py  finalizer_worker.py  s3_woker.py
src/api/: Dockerfile  main.py  requirements.txt
src/api/domain/: __init__.py  document.py
src/api/infra/: base.py  event_bus_base.py
src/api/infra/kafka/: event_bus.py  event_bus_kafka.py
src/api/infra/models/: document.py
src/api/infra/repositories/: documents_repository.py  documents_repository_sql.py
src/api/models/: documents.py
src/api/use_cases/: dependencies.py  documents.py
src/workers/es_worker/: Dockerfile  es_worker.py
src/workers/finalizer_worker/: Dockerfile  finalizer_worker.py  requirements.txt
src/workers/s3_worker/: Dockerfile  requirements.txt  s3_worker.py
